finish lesson06, also add new samples

--- a/example/flask1/templates/2.html
+++ b/example/flask1/templates/2.html
@@ -31,8 +31,8 @@
                  таким образом элемент с именем пользователя будет везде одинаковой ширины -->
             <span>{{loop.index}}. {{ user }}</span> 
 
-            <!-- # создали переменную file с именем файла и номером итерации на конце И получили
-                    для каждого пользователя сою картинку-->
+            <!-- # создаем переменную file с именем файла и номером итерации на конце и
+                 получаем таки образом  для каждого пользователя сою картинку-->
             {% set file = 'img/cat{}.jpg'.format(loop.index) %}
             <img src="{{ url_for('static', filename=file) }}" alt="pic1" width="50">
         </p>
