--- a/lesson06/templates/clicker.html
+++ b/lesson06/templates/clicker.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <a href="/clicker/"><img src="{{ url_for('static', filename='img/cat.jpg') }}"></a>
+    <a href="/fake-clicker/"><img src="{{ url_for('static', filename='img/cat.jpg') }}"></a>
     <p></p>
     <p>Количество нажатий: {{clicks}}</p>
     <p></p>
