working registration EP, users list(of dict), adding user_dict to users_list
not finished, TODO:
- validation of input registration form
- signing EP
- session!!!
- other stuff

--- a/lesson07/static/css/main.css
+++ b/lesson07/static/css/main.css
@@ -3,6 +3,11 @@ body {
     background-color: bisque;
 }
 
+registration_form {
+    text-align: left;
+    background-color: bisque;
+}
+
 h1 {
     color: red;
 }
