--- a/lesson07/templates/err.html
+++ b/lesson07/templates/err.html
@@ -1,10 +1,9 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
 
 <h1>Такой страницы не существует</h1>
-<p></p>
 
 
 {% endblock %}
