--- a/lesson08/static/css/main.css
+++ b/lesson08/static/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 header {
@@ -13,6 +13,12 @@ header p {
     color: #fff;
     text-align: right;
     margin-right: 20px;
+}
+
+div {
+    width: 220px;
+    margin: auto;
+    text-align: left;
 }
 
 .topnav ul {
