--- a/lesson08/templates/clicker.html
+++ b/lesson08/templates/clicker.html
@@ -1,4 +1,4 @@
-{% extends 'main.html' %}
+{% extends 'base.html' %}
 
 {% block content %}
 
@@ -6,7 +6,6 @@
 <a href="/fake-clicker/"><img src="{{ url_for('static', filename='img/cat.jpg') }}"></a>
 <p></p>
 <p>Количество нажатий: {{clicks}}</p>
-<p></p>
 
 
 {% endblock %}
