new navbar samples.html

--- a/lesson08/templates/samples.html
+++ b/lesson08/templates/samples.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <nav class="topnav">
+        <nav class="two">
             <ul>
                 <li><a href="/">Главная страница</a></li>
             </ul>
@@ -23,7 +23,7 @@
 
         <h2>Евгений Евтушенко</h2>
         <p>- 1955 -</p>
-        <div>
+        <div style="width: 220px; margin: auto; text-align: left;">
             <pre>
 Бывало, спит у ног собака,
 костер занявшийся гудит,
