--- a/lesson07/templates/base.html
+++ b/lesson07/templates/base.html
@@ -10,10 +10,7 @@
 
 <body>
     <header>
-        {% if 'user_id' in session %}
-        <p>Приветствуем Вас, {{session['username']}}!</p>
-        {% endif %}
-        <nav class="topnav">
+        <nav class="two">
             <ul>
                 <li><a href="/">Главная страница</a></li>
                 {% if 'user_id' in session %}
@@ -29,8 +26,14 @@
                 <li><a href="/login/">Войти</a></li>
                 <li><a href="/registration/">Регистрация</a></li>
                 {% endif %}
+
+                {% if 'user_id' in session %}
+                <p>Приветствуем Вас, {{session['username']}}!</p>
+                {% endif %}
+
             </ul>
         </nav>
+
     </header>
     <main class="content">
         {% block content %}
