--- a/lesson07/static/css/main.css
+++ b/lesson07/static/css/main.css
@@ -1,48 +1,46 @@
 body {
     margin: 0;
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
+    background-color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-header {
-    background-color: #782827;
-    padding: 10px 0;
+i {
+    margin-right: 10px;
 }
 
 header p {
-    color: #fff;
     text-align: right;
     margin-right: 20px;
 }
 
-.topnav ul {
-    list-style-type: none;
-    margin: 0;
+.two ul {
+    background: #D4E7EE;
+    overflow: hidden;
     padding: 0;
-    display: flex;
-    justify-content: center;
+    list-style: none;
+    margin: 0 auto;
 }
 
-.topnav li {
-    margin: 0 15px;
+.two li {
+    float: left;
 }
 
-.topnav a {
+.two a {
+    display: block;
+    padding: 1em;
     text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    padding: 10px 20px;
-    background-color: #782827;
-    border-radius: 5px;
-    transition: background-color 0.5s, color 0.5s;
+    transition: .5s linear;
 }
 
-.topnav a:hover {
-    background-color: #c84342;
-    color: #fff;
+.two a:hover {
+    background: #ADC0CE
 }
 
 .content {
     padding: 20px;
     text-align: center;
+}
+
+a {
+    text-decoration: none;
 }
