almost done hw08

--- a/lesson08/templates/samples.html
+++ b/lesson08/templates/samples.html
@@ -162,27 +162,202 @@
             </tr>
             <tr style="text-align:left">
                 <td>1</td>
-                <td><a href="https://ru.wikipedia.org/wiki/Водород">Водород</a></td>
+                <td style="text-decoration:underline;"><a href="https://ru.wikipedia.org/wiki/Водород">Водород</a></td>
                 <td><strong>H</strong></td>
                 <td>1766</td>
                 <td><img src="https://api.iconify.design/fluent-emoji-flat/memo.svg"></td>
             </tr>
             <tr style="text-align:left">
                 <td>2</td>
-                <td><a href="https://ru.wikipedia.org/wiki/Гелий">Гелий</a></td>
+                <td style="text-decoration:underline;"><a href="https://ru.wikipedia.org/wiki/Гелий">Гелий</a></td>
                 <td><strong>He</strong></td>
-                <td>1766</td>
+                <td>1895</td>
                 <td><img src="https://api.iconify.design/fluent-emoji-flat/memo.svg"></td>
             </tr>
             <tr style="text-align:left">
                 <td>3</td>
-                <td><a href="https://ru.wikipedia.org/wiki/Бор_(элемент)">Бор</a></td>
+                <td style="text-decoration:underline;"><a href="https://ru.wikipedia.org/wiki/Бор_(элемент)">Бор</a>
+                </td>
                 <td><strong>B</strong></td>
-                <td>1766</td>
+                <td>1808</td>
                 <td><img src="https://api.iconify.design/fluent-emoji-flat/memo.svg"></td>
             </tr>
         </table>
         <hr width="480">
+
+        <h1 style="width: 220px; margin: auto; text-align: left;">Генераторы</h1>
+        <ul style="width: 220px; margin: auto; text-align: left;">
+            <li>Цвета
+                <ul>
+                    <li>Color Mixers</li>
+                    <li>Color Tester</li>
+                    <li>Color Pallete</li>
+                </ul>
+            </li>
+            <li>Фавиконы</li>
+            <ol>
+                <li>Favicon.cc</li>
+                <ul>
+                    <li style="text-decoration:underline;"><a href="">Скачать</a></li>
+                    <li style="text-decoration:underline;"><a href="">Демо</a></li>
+                </ul>
+                <li>WebLab Favicon</li>
+            </ol>
+            <li>Фоны
+                <ul>
+                    <li>BgMaker</li>
+                    <li>StripeGenerator</li>
+                </ul>
+            </li>
+            <li>Изображения</li>
+            <ol>
+                <li>Buttonator</li>
+                <li>AjaxLoad</li>
+            </ol>
+        </ul>
+        <hr width="500">
+
+        <div style="width: 260px; margin: auto; text-align: left;">
+            <h2>Стихотворение</h2>
+            <p>Мириады маленьких дел,
+                <br>Пьют по капле гаснущий день,
+                <br>А <i>дела большие</i> сушит жажда.
+                <br>Оставляя все на "потом",
+                <br>Прозреваем задним числом,
+                <br>Только день <b>не повторится</b> дважды.
+                <br>
+                <br>И.Тальков
+            </p>
+        </div>
+        <hr width="500">
+
+        <div style="width: 400px; margin: auto; text-align: left;">
+            <h1 style="color:sienna;">Заголовок первого уровня</h1>
+            <h2>Заголовок второго уровня</h2>
+            <h3 style="color:bisque;">Заголовок третьего уровня</h3>
+            <p>Пример ссылки <a style="text-decoration:underline;" href="">ведущей на другую страницу</a></p>
+        </div>
+        <hr width="500">
+
+        <div style="width: 400px; margin: auto; text-align: left;">
+            <p><label>Неделя: </label><input name="user_week" type="week" required></p>
+            <p><label>Дата и время: </label><input name="user_date_time" type="datetime-local" required></p>
+            <p><label>Месяц: </label><input name="user_month" type="month" required></p>
+            <p><label>Время: </label><input name="user_time" type="time" required></p>
+            <input type="submit">
+        </div>
+        <hr width="500">
+
+        <div style="width: 550px; margin: auto; text-align: left;">
+            <h1>Форма заявки на работу в зоопарке</h1>
+            <p><i>Пожалуйста, заполните форму. Обязательные поля помечены</i><span style="color: red;">*</span></p>
+
+            <form action="" method="post">
+
+                <fieldset>
+
+                    <legend>Контактная информация</legend>
+
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Имя<span style="color: red;">*</span></td>
+                                <td><input name="user_name" type="text" required></td>
+                            </tr>
+                            <tr>
+                                <td>Телефон</td>
+                                <td><input name="user_phone" type="text"></td>
+                            </tr>
+                            <tr>
+                                <td>Email <span style="color: red;">*</td>
+                                <td></label><input name="user_name" type="text" required></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </fieldset>
+
+                <br>
+                <fieldset>
+
+                    <legend>Персональная информация</legend>
+
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>Возраст <span style="color: red;">*</span></td>
+                                <td><input name="user_age" type="number" required></td>
+                            </tr>
+                            <tr>
+                                <td>Пол</td>
+                                <td><select name="gender">
+                                        <option value="male">Мужчина</option>
+                                        <option value="female">Женщина</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Перечислите личные качества </td>
+                                <td><textarea rows="10" cols="35" name="user_info" type="text"></textarea></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </fieldset>
+
+                <br>
+                <fieldset>
+
+                    <legend>Выберите ваших любимых животных</legend>
+
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td>
+                                    <input type="hidden" name="zebra" value="0">
+                                    <input type="checkbox" name="zebra" value="1">Зебра
+                                </td>
+                                <td>
+                                    <input type="hidden" name="cat" value="0">
+                                    <input type="checkbox" name="cat" value="1">Кошак
+                                </td>
+                                <td>
+                                    <input type="hidden" name="anaconda" value="0">
+                                    <input type="checkbox" name="anaconda" value="1">Анаконда
+                                </td>
+                                <td>
+                                    <input type="hidden" name="human" value="0">
+                                    <input type="checkbox" name="human" value="1">Человек
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    <input type="hidden" name="elephant" value="0">
+                                    <input type="checkbox" name="elephant" value="1">Слон
+                                </td>
+                                <td>
+                                    <input type="hidden" name="antelope" value="0">
+                                    <input type="checkbox" name="antelope" value="1">Антилопа
+                                </td>
+                                <td>
+                                    <input type="hidden" name="dove" value="0">
+                                    <input type="checkbox" name="dove" value="1">Голубь
+                                </td>
+                                <td>
+                                    <input type="hidden" name="crab" value="0">
+                                    <input type="checkbox" name="crab" value="1">Краб
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </fieldset>
+
+                <br>
+                <input type="submit" value="Отправить информацию">
+            </form>
+        </div>
+        <hr width="500">
 
         <a href="/">Вернуться на главную страницу</a>
     </main>
